--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="css/animate.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
     <link href="css/responsive.css" rel="stylesheet">
-    <link rel="shortcut icon" href="images/ico/favicon.png">
+    <link rel="shortcut icon" href="images/ico/icon.png">
 </head>
 <!--/head-->
 
