Change slider title

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                 <div class="item active" style="background-image: url(images/slider/slide3.jpg)">
                     <div class="carousel-caption">
                         <div>
-                            <h2 class="heading animated bounceInDown">'Himu' Onepage HTML Template</h2>
-                            <p class="animated bounceInUp">Fully Professional one page template</p>
+                            <h2 class="heading animated bounceInDown">Battles are defined by the acts of great Warriors</h2>
+                            <p class="animated bounceInUp">And sacrifices that offer hope</p>
                             <a class="btn btn-default slider-btn animated fadeIn" href="#">Get Started</a>
                         </div>
                     </div>
@@ -67,16 +67,16 @@
                 <div class="item" style="background-image: url(images/slider/slide2.jpg)">
                     <div class="carousel-caption">
                         <div>
-                            <h2 class="heading animated bounceInDown">Get All in Onepage</h2>
-                            <p class="animated bounceInUp">Everything is outstanding </p> <a class="btn btn-default slider-btn animated fadeIn" href="#">Get Started</a>
+                            <h2 class="heading animated bounceInDown">But in the end, only the victor define the history</h2>
+                            <p class="animated bounceInUp">The crush hopeful upstart, ato build their dynasty</p> <a class="btn btn-default slider-btn animated fadeIn" href="#">Get Started</a>
                         </div>
                     </div>
                 </div>
                 <div class="item" style="background-image: url(images/slider/slide1.jpg)">
                     <div class="carousel-caption">
                         <div>
-                            <h2 class="heading animated bounceInRight">Fully Responsive Template</h2>
-                            <p class="animated bounceInLeft">100% Responsive HTML template</p>
+                            <h2 class="heading animated bounceInRight">In this battle of regions</h2>
+                            <p class="animated bounceInLeft">You will conquer all others, to make your own history</p>
                             <a class="btn btn-default slider-btn animated bounceInUp" href="#">Get Started</a>
                         </div>
                     </div>
