--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <div class="carousel-caption">
                         <div>
                             <h2 class="heading animated bounceInDown">But in the end, only the victor define the history</h2>
-                            <p class="animated bounceInUp">The crush hopeful upstart, ato build their dynasty</p> <a class="btn btn-default slider-btn animated fadeIn" href="#">Get Started</a>
+                            <p class="animated bounceInUp">The crush hopeful upstart, and build their dynasty</p> <a class="btn btn-default slider-btn animated fadeIn" href="#">Get Started</a>
                         </div>
                     </div>
                 </div>
