--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> 
 					</button>
                     <a class="navbar-brand" href="index.html">
-                        <h1><img src="images/logo.png" alt="logo"></h1>
+                        <h1><img src="images/logo.png" alt="logo" class='logo'></h1>
                     </a>
                 </div>
                 <div class="collapse navbar-collapse">
