--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> 
 						<span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> 
 					</button>
-                    <a class="navbar-brand" href="index.html">
+                    <a class="navbar-brand" href="https://lol.garena.com/">
                         <h1><img src="images/logo.png" alt="logo" class='logo'></h1>
                     </a>
                 </div>
