Fix slider 3 title

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <div class="carousel-caption">
                         <div>
                             <h2 class="heading animated bounceInRight">In this battle of regions</h2>
-                            <p class="animated bounceInLeft">You will conquer all others, to make your own history</p>
+                            <p class="animated bounceInLeft">Will you conquer all others, to make history ?</p>
                             <a class="btn btn-default slider-btn animated bounceInUp" href="#">Get Started</a>
                         </div>
                     </div>
