Take League with you part

--- a/index.html
+++ b/index.html
@@ -1007,14 +1007,16 @@
             </section>
         </div>
     </div>
+
     <div class="style__ProgressiveHydration-uocr3z-0 eafTob type-download_app next-type-empty " data-progressive-hydration-id="blt39ad999ed8730ed7-section_2">
         <section class="style__Section-sc-1lcv94c-0 style__SectionResponsive-sc-1lcv94c-9 bbzbel">
             <div class="style__SectionInner-sc-1lcv94c-1 gywGJt">
                 <h1 class="style__Title-sc-1lcv94c-2 kfCVrH">Take League With You</h1>
                 <div class="style__Description-sc-1lcv94c-3 gXWTTo">Download the League app to stay connected to friends and the latest game and esports news.</div>
                 <div class="style__Links-sc-1lcv94c-4 ejYTrN">
-                    <a class="style__MobileStoreButton-sc-1lcv94c-5 style__AppStoreButton-sc-1lcv94c-8 hqVMrt" href="https://apps.apple.com/us/app/league-of-legends-friends/id1077150310"><img alt="Download on the App Store" class="style__NoScriptImg-sc-1rs2qnb-0 style__Img-sc-1rs2qnb-1 bhdZGR style__Badge-sc-1lcv94c-6 kMJeVm" src="https://lolstatic-a.akamaihd.net/frontpage/apps/prod/harbinger-l10-website/en-us/production/en-us/static/Download_on_the_App_Store_Badge_US-UK_RGB_blk_092917.2928664f.svg"><noscript><img src="https://lolstatic-a.akamaihd.net/frontpage/apps/prod/harbinger-l10-website/en-us/production/en-us/static/Download_on_the_App_Store_Badge_US-UK_RGB_blk_092917.2928664f.svg" alt="Download on the App Store" class="style__NoScriptImg-sc-1rs2qnb-0 jenRBy style__Badge-sc-1lcv94c-6 kMJeVm"/></noscript></a>
-                    <a class="style__MobileStoreButton-sc-1lcv94c-5 style__GooglePlayButton-sc-1lcv94c-7 kbgece" href="https://play.google.com/store/apps/details?id=com.riotgames.mobile.leagueconnect&amp;hl=en"><img alt="Get it on Google Play" class="style__NoScriptImg-sc-1rs2qnb-0 style__Img-sc-1rs2qnb-1 bhdZGR style__Badge-sc-1lcv94c-6 kMJeVm" src="https://lolstatic-a.akamaihd.net/frontpage/apps/prod/harbinger-l10-website/en-us/production/en-us/static/en_get.b89beec4.svg"><noscript><img src="https://lolstatic-a.akamaihd.net/frontpage/apps/prod/harbinger-l10-website/en-us/production/en-us/static/en_get.b89beec4.svg" alt="Get it on Google Play" class="style__NoScriptImg-sc-1rs2qnb-0 jenRBy style__Badge-sc-1lcv94c-6 kMJeVm"/></noscript></a>
+                    <a class="style__MobileStoreButton-sc-1lcv94c-5 style__AppStoreButton-sc-1lcv94c-8 hqVMrt" href="https://apps.apple.com/us/app/league-of-legends-friends/id1077150310">
+                        <img alt="Download on the App Store" class="style__NoScriptImg-sc-1rs2qnb-0 style__Img-sc-1rs2qnb-1 bhdZGR style__Badge-sc-1lcv94c-6 kMJeVm" src="https://lolstatic-a.akamaihd.net/frontpage/apps/prod/harbinger-l10-website/en-us/production/en-us/static/Download_on_the_App_Store_Badge_US-UK_RGB_blk_092917.2928664f.svg">
+                    </a>
                 </div>
             </div>
         </section>
