--- a/index.html
+++ b/index.html
@@ -30,12 +30,10 @@
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li class="scroll active"><a href="#navigation">Home</a></li>
-                        <li class="scroll"><a href="#about-us">About Us</a></li>
-                        <li class="scroll"><a href="#services">Services</a></li>
-                        <li class="scroll"><a href="#our-team">Our Team</a></li>
-                        <li class="scroll"><a href="#portfolio">Portfolio</a></li>
-                        <li class="scroll"><a href="#clients">Clients</a></li>
-                        <li class="scroll"><a href="#blog">Blog</a></li>
+                        <li class="scroll"><a href="#___gatsby">About Us</a></li>
+                        <li class="scroll"><a href="#skills">Skills</a></li>
+                        <li class="scroll"><a href="#reward">Reward</a></li>
+                        <li class="scroll"><a href="#download">Download</a></li>
                         <li class="scroll"><a href="#contact">Contact</a></li>
                     </ul>
                 </div>
@@ -133,7 +131,7 @@
                         </div>
                 </div>
                 </section>
-                <div>
+                <div id='skills'>
                     <div class="style__Wrapper-n01o3t-0 cHhnuw skills-and-abilities">
                         <div class="style__Background-n01o3t-1 knLYLk">
                             <div class="style__Container-sc-11ya0m2-0 kkhYOT">
@@ -222,7 +220,7 @@
                                 <div class="style__SectionInner-sc-2u3d66-1 bAGtaY">
                                     <div class="style__Container-sc-1uho5c3-0 gvLtET style__Hex-sc-2u3d66-2-Component fQdfAp"><canvas class="style__Canvas-sc-1uho5c3-1 dsXNcy" width="576" height="380" style="width: 768.667px; height: 507.521px; left: -2px; top: -2px;"></canvas></div>
                                     <div class="style__Wrapper-sc-14gxj1e-0 ctXuuX style__Title-sc-2u3d66-3-Component fGWBrn">
-                                        <h1 class="style__Heading-sc-14gxj1e-1 jWvpDq"><span class="style__Intro-sc-14gxj1e-2 fmCNnE"><div class="style__RevealWrapper-cwgjme-0 jaWYak inline show-nw" style="animation-duration: 2800ms; animation-delay: 100ms; animation-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);"><span>Start Playing</span></div>
+                                        <h1 class="style__Heading-sc-14gxj1e-1 jWvpDq"><span class="style__Intro-sc-14gxj1e-2 fmCNnE"><div class="style__RevealWrapper-cwgjme-0 jaWYak inline show-nw" style="animation-duration: 2800ms; animation-delay: 100ms; animation-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);"><span id='reward'>Start Playing</span></div>
                                     </span><strong class="style__Title-sc-14gxj1e-3 iLTyui"><div class="style__RevealWrapper-cwgjme-0 jaWYak inline show-se" style="animation-duration: 2000ms; animation-delay: 0ms; animation-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);"><span>Earn Rewards</span></div></strong></h1>
                                 </div>
                                 <div class="style__ImageContainer-sc-2u3d66-9 eBWdgK"><img class="style__NoScriptImg-sc-1rs2qnb-0 style__Img-sc-1rs2qnb-1 bhdZGR is-active" src="https://lolstatic-a.akamaihd.net/frontpage/apps/prod/harbinger-l10-website/en-us/production/en-us/static/day-1-3851405e6d5a11687a1bd0de330364ad.png"><noscript><img src="https://lolstatic-a.akamaihd.net/frontpage/apps/prod/harbinger-l10-website/en-us/production/en-us/static/day-1-3851405e6d5a11687a1bd0de330364ad.png" class="style__NoScriptImg-sc-1rs2qnb-0 jenRBy is-active"/></noscript>
@@ -248,7 +246,7 @@
     </div>
 
     <div class="style__ProgressiveHydration-uocr3z-0 eafTob type-download_app next-type-empty " data-progressive-hydration-id="blt39ad999ed8730ed7-section_2">
-        <section class="style__Section-sc-1lcv94c-0 style__SectionResponsive-sc-1lcv94c-9 bbzbel">
+        <section class="style__Section-sc-1lcv94c-0 style__SectionResponsive-sc-1lcv94c-9 bbzbel" id="download">
             <div class="style__SectionInner-sc-1lcv94c-1 gywGJt">
                 <h1 class="style__Title-sc-1lcv94c-2 kfCVrH">Take League With You</h1>
                 <div class="style__Description-sc-1lcv94c-3 gXWTTo">Download the League app to stay connected to friends and the latest game and esports news.</div>
@@ -260,7 +258,7 @@
             </div>
         </section>
     </div>
-    <footer>
+    <footer id="contact">
         <div>
             <div class="riotbar-footer lol-theme i18n-en_US i18n-en" lang="en" style="margin-top: 0px;">
                 <div class="riotbar-footer-content default-background">
